--- a/week_07/bankofsimba/src/main/resources/static/css/style.css
+++ b/week_07/bankofsimba/src/main/resources/static/css/style.css
@@ -1,3 +1,29 @@
+body {
+    padding: 30px 20%;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.container {
+    width: fit-content;
+}
+
+
+a[type="navbar"] {
+    text-decoration: none;
+    padding: 3px 8px;
+    margin: 20px 5px;
+    background-color: rgb(250, 250, 250);
+    color: black;
+    border: none;
+    border-radius: 4px;
+    display: inline-block;
+    cursor: pointer;
+}
+
+a[type="navbar"]:hover {
+    opacity: 0.5;
+}
+
 table {
     margin: 10px 5px;
     width: 100%;
