--- a/week_07/bankofsimba/src/main/resources/templates/show.html
+++ b/week_07/bankofsimba/src/main/resources/templates/show.html
@@ -7,36 +7,43 @@
 </head>
 <body>
 
-  <div class="table">
+  <div class="container">
 
-    <table>
-      <thead>
-      <tr>
-        <th>ID</th>
-        <th>Account owner</th>
-        <th>Title</th>
-        <th>Species</th>
-        <th></th>
-        <th>Balance</th>
-      </tr>
-      </thead>
-      <tbody>
-        <tr th:each="account : ${demoBank}">
-          <td align="center" th:text="${accountStat.count}"></td>
-          <td th:text="${account.getName()}"></td>
-          <td align="center" th:if="${account.isKing()}"><img th:src="@{img/crown.png}"/></td>
-          <td align="center" th:unless="${account.isKing()}">subject</td>
-          <td align="center" th:text="${account.getAnimalType()}"></td>
-          <div th:switch="${account.isKing()}">
-            <td align="center" th:case="true">Good One</td>
-            <td align="center" th:case="false">Bad Guy</td>
-          </div>
-          <td th:text="${#numbers.formatDecimal(account.getBalance(), 1, 'COMMA', 2, 'POINT')} + ' ' + ${account.getCurrency()}"></td>
+    <div class="navbar">
+      <a type="navbar" href="add-account">Add account</a>
+    </div>
+
+    <div class="table">
+
+      <table>
+        <thead>
+        <tr>
+          <th>ID</th>
+          <th>Account owner</th>
+          <th>Title</th>
+          <th>Species</th>
+          <th>Team</th>
+          <th>Balance</th>
         </tr>
-      </tbody>
-    </table>
+        </thead>
+        <tbody>
+          <tr th:each="account : ${demoBank}">
+            <td align="center" th:text="${accountStat.count}"></td>
+            <td th:text="${account.getName()}"></td>
+            <td align="center" th:if="${account.isKing()}"><img th:src="@{img/crown.png}"/></td>
+            <td th:unless="${account.isKing()}"></td>
+            <td th:text="${account.getAnimalType()}"></td>
+            <div th:switch="${account.isGood()}">
+              <td th:case="true">Good One</td>
+              <td th:case="false">Bad Guy</td>
+            </div>
+            <td th:text="${#numbers.formatDecimal(account.getBalance(), 1, 'COMMA', 2, 'POINT')} + ' ' + ${account.getCurrency()}"></td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
 
   </div>
-
 </body>
 </html>
