--- a/week_07/03_bankofsimba/src/main/resources/templates/show.html
+++ b/week_07/03_bankofsimba/src/main/resources/templates/show.html
@@ -29,11 +29,11 @@
         <tbody>
           <tr th:each="account : ${demoBank}">
             <td align="center" th:text="${accountStat.count}"></td>
-            <td th:text="${account.getName()}"></td>
-            <td align="center" th:if="${account.isKing()}"><img th:src="@{img/crown.png}"/></td>
-            <td th:unless="${account.isKing()}"></td>
-            <td th:text="${account.getAnimalType()}"></td>
-            <div th:switch="${account.isGood()}">
+            <td th:text="${account.name}"></td>
+            <td align="center" th:if="${account.isKing}"><img th:src="@{img/crown.png}"/></td>
+            <td th:unless="${account.isKing}"></td>
+            <td th:text="${account.animalType}"></td>
+            <div th:switch="${account.isGood}">
               <td th:case="true">Good One</td>
               <td th:case="false">Bad Guy</td>
             </div>
