--- a/week_07/05_foxclub/src/main/resources/templates/login.html
+++ b/week_07/05_foxclub/src/main/resources/templates/login.html
@@ -1,22 +1,22 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+  <link rel="stylesheet" th:href="@{css/login.css}" />
+  <title>Signin</title>
+  <meta charset="utf-8">
 </head>
+
 <body>
-  <h1>Create Account</h1>
-  <form method="post" th:action="@{/login}" th:object="${character}">
+  <form class="form-signin" method="post" th:action="@{/login}">
+    <img alt="Image" th:src="@{/img/Cinema-Avengers-icon.png}" th:width="120" th:height="120"/>
+    <h1>Create Account</h1>
     <label>Character Name: </label>
-    <input name="name" th:field="*{name}">
+    <input name="name" th:field="${c.name}">
     <label>Hero type: </label>
-    <select th:field="${character}" name="type">
-    <option th:each="type : *{availableTypes}"
-            th:value="*{type.}"/>
+    <select name="type" th:field="${c.type}" >
+      <option th:each="type : ${c.getAvailableTypes()}" th:value="${type}" th:text="${type}"/>
     </select>
-
-
-    <button>Create character</button>
+    <button type="submit">Create character</button>
   </form>
 </body>
 </html>
