--- a/week_07/club2/src/main/resources/templates/login.html
+++ b/week_07/club2/src/main/resources/templates/login.html
@@ -7,16 +7,16 @@
 </head>
 
 <body>
-  <form class="form-signin" method="post" th:object="${char}" th:action="@{/login}">
+  <form class="form-signin" method="post" th:object="${character}" th:action="@{/login}">
     <img alt="Image" th:src="@{/img/Cinema-Avengers-icon.png}" th:width="120" th:height="120"/>
     <h1>Create Account</h1>
     <label>Character Name: </label>
     <input name="name" th:field="*{name}">
     <label>Hero type: </label>
     <select name="type" th:field="*{type}" >
-      <option th:value="'ironman''" th:text="Iron Man"></option>
-      <option th:value="'thor'" th:text="Thor"></option>
-      <option th:value="'captain'" th:text="Captain America"></option>
+      <option th:value="'ironman'">Iron Man</option>
+      <option th:value="'thor'">Thor</option>
+      <option th:value="'captain'">Captain America</option>
     </select>
     <button type="submit">Create character</button>
   </form>
