--- a/week_08/day01/connectmysql/src/main/resources/templates/main.html
+++ b/week_08/day01/connectmysql/src/main/resources/templates/main.html
@@ -1,67 +1,85 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <link href="/webjars/bootstrap/3.3.7-1/css/bootstrap.min.css" rel="stylesheet"/>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>List Of Todo's</title>
 </head>
 <body>
   <header>
-    <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-      <div class="container">
-        <div class="navbar-header">
-          <a class="navbar-brand" href="/todo/list">
-            <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>
-            MyTodo Organizer
-          </a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav">
-            <li role="presentation"><a href="/todo/active">Active todo's</a></li>
-            <li role="presentation"><a href="/todo/add-todo">Add todo</a></li>
+    <div class="container">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="/todo/list">
+          <i class="fas fa-igloo"></i> iTodo
+        </a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="/todo/add-todo">Add todo</a>
+            </li>
           </ul>
+          <form class="form-inline my-2 my-lg-0" method="get" th:object="" th:action="@{/todo/search}">
+            <div class="input-group mb-3">
+              <input type="text" class="form-control" aria-label="Text input with segmented dropdown button" name="searchfor">
+              <div class="input-group-append">
+                <button type="button" class="btn btn-outline-secondary"><i class="fa fa-search" aria-hidden="true"></i></button>
+                <button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <span class="sr-only"><i class="fas fa-angle-down"></i></span>
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="/todo/active">Active todo's</a>
+                  <div role="separator" class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Separated link</a>
+                </div>
+              </div>
+            </div>
+          </form>
         </div>
-      </div>
-    </nav>
+      </nav>
+    </div>
   </header>
   <main>
     <div class="container">
-      <div class="row">
-        <form method="get" th:action="@{/todo/search}">
-          <div class="col-md-6">
-              <input type="text" class="form-control" placeholder="Search for title" name="searchfor"/>
-          </div>
-          <button type="submit" class="btn btn-primary">
-            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
-          </button>
-        </form>
-      </div>
-    <table class="table table-striped">
-      <thead>
-      <tr>
-        <th>Urgent</th>
-        <th>Done</th>
-        <th>Title</th>
-        <th>Edit</th>
-        <th>Delete</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr scope="row" th:each="todo : ${todos}">
-        <td><p th:text="${todo.urgent} ? 'warning' : ''" class="material-icons"></p></td>
-        <td th:text="${todo.done} ? 'check_box' : 'check_box_outline_blank'" class="material-icons"></td>
-        <td th:text="${todo.title}"></td>
-        <td><a class="btn btn-primary btn-sm" th:href="@{/todo/{id}/edit(id=${todo.id})}">
-          <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></a></td>
-        <td><a class="btn btn-primary btn-sm" th:href="@{/todo/{id}/delete(id=${todo.id})}">
-          <span class="glyphicon glyphicon-trash" aria-hidden="true"></span></a></td>
-      </tr>
-      </tbody>
-    </table>
+      <table class="table table-striped">
+        <thead class="thead-light">
+        <tr>
+          <th>Urgent</th>
+          <th>Done</th>
+          <th>Title</th>
+          <th>Edit</th>
+          <th>Delete</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr scope="row" th:each="todo : ${todos}">
+          <td th:switch="${todo.urgent}">
+            <div th:case="true">
+              <i class="fa fa-bomb" aria-hidden="true"></i>
+            </div>
+          </td>
+          <td th:switch="${todo.done}">
+            <div th:case="true">
+              <i class="fa fa-check-square-o" aria-hidden="true"></i>
+            </div>
+            <div th:case="false">
+              <i class="fa fa-square-o" aria-hidden="true"></i>
+            </div>
+          </td>
+          <td th:text="${todo.title}"></td>
+          <td><a class="btn btn-primary btn-sm" th:href="@{/todo/{id}/edit(id=${todo.id})}">
+            <i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></td>
+          <td><a class="btn btn-primary btn-sm" th:href="@{/todo/{id}/delete(id=${todo.id})}">
+            <i class="fa fa-trash-o" aria-hidden="true"></i></a></td>
+        </tr>
+        </tbody>
+      </table>
     </div>
   </main>
-  <script src="/webjars/jquery/2.1.4/jquery.js"></script>
-  <script src="/webjars/bootstrap/3.3.7-1/js/bootstrap.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/1bdc29b825.js"></script>
 </body>
 </html>
