--- a/week_08/04_redditproject/src/main/resources/static/css/styles.css
+++ b/week_08/04_redditproject/src/main/resources/static/css/styles.css
@@ -64,6 +64,10 @@ body {
     font-size: 20px;
 }
 
+.post a {
+    text-decoration: none;
+}
+
 .postbuttons {
     display: flex;
     flex-direction: column;
