--- a/week_08/04_redditproject/src/main/resources/templates/login.html
+++ b/week_08/04_redditproject/src/main/resources/templates/login.html
@@ -18,18 +18,18 @@
 	<a href="/submit">Submit new post</a>
 </div>
 <div class="container">
-	<form class="editpost" th:object="${post}" method="post" action="/submit">
-		<div>
-			<label for="title">Title of the post:</label>
-			<input id="title" type="text" name="title" th:value="*{title}">
-		</div>
-		<div>
-			<label for="url">URL of the post:</label>
-			<input id="url" type="text" name="url" th:value="*{url}">
-		</div>
-		<button type="submit">Submit</button>
-		<button type="reset">Cancel</button>
+	<!--<div th:if="${param.error}">-->
+		<!--Invalid username and password.-->
+	<!--</div>-->
+	<!--<div th:if="${param.logout}">-->
+		<!--You have been logged out.-->
+	<!--</div>-->
+	<form th:action="@{/login}" method="post">
+		<div><label> User Name : <input type="text" name="username"/> </label></div>
+		<div><label> Password: <input type="password" name="password"/> </label></div>
+		<div><input type="submit" value="Sign In"/></div>
 	</form>
 </div>
 </body>
 </html>
+
