Upd: Until class is now UntilDto, removed all methods from it. Created first test method for DoUntilController

--- a/week_09/day01_restbackend/src/main/resources/templates/index.html
+++ b/week_09/day01_restbackend/src/main/resources/templates/index.html
@@ -42,8 +42,8 @@
 	</div>
 
 	<div class="jumbotron">
-		<h1>Do until</h1>
-		<p class="lead">Try your do-until exercise with just one button</p>
+		<h1>Do untilDto</h1>
+		<p class="lead">Try your do-untilDto exercise with just one button</p>
 		<ul id="dountil_response"></ul>
 		<p><a class="btn btn-lg btn-success" href="#" role="button" id="dountil">Try dountil endpoint</a></p>
 	</div>
