--- a/week_09/example_exam/src/main/resources/templates/index.html
+++ b/week_09/example_exam/src/main/resources/templates/index.html
@@ -8,7 +8,13 @@
 </head>
 <body>
 <div class="message">
-	<p th:text="${message}"></p>
+	<p th:text="${error}" th:style="'color:red'"></p>
+	<p th:if="${code != 'empty' && error != 'Your alias is already in use!'}">
+		Your URL is aliased to
+		<b th:text="${name}"></b>
+		and your secret code is
+		<b th:text="${code}"></b>
+	</p>
 </div>
 <div class="container">
 	<form th:object="${newAlias}" method="post" action="/save-link">
